--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "keypress": "^0.2.1",
     "next": "16.0.7",
+    "node-audiorecorder": "^3.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "whisper-node": "^1.1.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
